--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -1,1 +1,20 @@
-
+<div class="container">
+    <div 
+        class="member"
+        *ngFor='let member of members'
+        [ngStyle]="{'box-shadow':'0 0 10px' + setBoxShadowColor(member.type)}"
+        (click)="showModal(member)">
+        <div class="info">
+            <p>First name</p>
+            <p>Last name</p>
+        </div>
+        <div class="name">
+            <p>{{member.firstName}}</p>
+            <p>{{member.lastName}}</p>
+        </div>
+    </div>
+</div>
+<app-member-modal
+                 *ngIf="isModalOpen"
+                 [member]='member'
+                 (onClose)=closeModal($event)></app-member-modal>
