implemented logic -for change type -for delete member

--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -17,4 +17,6 @@
 <app-member-modal
                  *ngIf="isModalOpen"
                  [member]='member'
-                 (onClose)=closeModal($event)></app-member-modal>
+                 (onClose)=closeModal()
+                 (onActivateDeactivate)=activateDeactivateMember($event)
+                 (onDelete)=deleteMember($event)></app-member-modal>
