--- a/src/app/add-member/add-member.component.scss
+++ b/src/app/add-member/add-member.component.scss
@@ -34,7 +34,7 @@
         input:-internal-autofill-selected {
             background-color: white;
         }
-        input[type="button"]{
+        .button{
             outline: none;
             border: 2px solid $dark-green;
             background-color: $green;
@@ -42,6 +42,9 @@
             font-size: 24px;
             font-weight: bold;
             height: 50px;
+            outline: none;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
     }
