--- a/src/app/member-list/member-list.component.scss
+++ b/src/app/member-list/member-list.component.scss
@@ -1,28 +1,50 @@
 @import '../../assets/style/style.scss';
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
+    position: relative;
     padding: 20px;
-    width: calc(100%-20px);
-    .member {
-        flex: 0 0 19%;
-        box-shadow: 0 0 5px $grey;
-        background-color: white;
-        border-radius: 5px;
-        padding: 20px;
-        margin: 10px;
-        font-size: 18px;
-        cursor: pointer;
-        .name {
-            text-align: right;
-            width: 50%;
-            padding-left: 50%;
+    text-align: center;
+    .header {
+        font-size: 26px;
+        color: $dark-green;
+        button {
+            width: 200px;
+            height: 50px;
+            border-radius: 5px;
+            background-color: $dark-green;
+            color: white;
+            font-size: 18px;
+            outline: none;
+            border: none;
+            cursor: pointer;
         }
-        .info {
-            text-align: left;
-            width: 50%;
-            position: absolute;
+    }
+    .member-items {
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        padding-top: 5%;
+        .member {
+            flex: 0 1 calc(20% - 8px);
+            box-shadow: 0 0 5px $grey;
+            background-color: white;
+            border-radius: 5px;
+            padding: 20px;
+            margin: 10px;
+            font-size: 18px;
+            cursor: pointer;
+            min-width: 200px;
+            max-width: 250px;
+            .name {
+                text-align: right;
+                width: 50%;
+                padding-left: 50%;
+            }
+            .info {
+                text-align: left;
+                width: 50%;
+                position: absolute;
+            }
         }
     }
 }
