--- a/src/app/member-list/member-list.component.scss
+++ b/src/app/member-list/member-list.component.scss
@@ -1,6 +1,6 @@
 @import '../../assets/style/style.scss';
 
-.container {
+/* .container {
     position: relative;
     padding: 20px;
     text-align: center;
@@ -45,6 +45,42 @@
                 width: 50%;
                 position: absolute;
             }
+        }
+    }
+} */
+
+.container {
+    padding: 30px;
+    text-align: center;
+    .header {
+        font-size: 26px;
+        color: $dark-green;
+        button {
+            width: 200px;
+            height: 50px;
+            border-radius: 5px;
+            background-color: $dark-green;
+            color: white;
+            font-size: 18px;
+            outline: none;
+            border: none;
+            cursor: pointer;
+        }
+    }
+    .members {
+        padding-top: 30px;
+        display: flex;
+        flex-flow: row wrap;
+        position: relative;
+        align-items: center;
+        width: 100%;
+        .member {
+            padding: 4px;
+            flex: 0 1 20%;
+            font-size: 18px;
+            margin: 8px;
+            min-width: 140px;
+            max-width: 250px;
         }
     }
 }
