--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-
+<ul>
+    <li>
+        <a routerLink="/"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{exact:true}">Add member</a>
+    </li>
+    <li>
+        <a routerLink="member-list"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{exact: true}">Member list</a>
+    </li>
+</ul>
 <router-outlet></router-outlet>
