--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -4,7 +4,7 @@
         <button (click)="clearList()"
                 *ngIf="members.length !== 0">Clear List</button>   
     </div>
-    <app-type-counter [membersCount]="membersCount"></app-type-counter>   
+    <app-type-counter [typeCounter]="typeCounter"></app-type-counter>   
     <div class="member-container">
           <div class="members">
             <div class="member"
