--- a/src/app/member-list/type-counter/type-counter.component.html
+++ b/src/app/member-list/type-counter/type-counter.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p [style.color]="'#3CB371'">Activated members : {{membersCount.activated}}</p>
-    <p [style.color]="'#696969'">Invited members : {{membersCount.invited}}</p>
+    <p [style.color]="'#3CB371'">Activated members : {{typeCounter.activated}}</p>
+    <p [style.color]="'#696969'">Invited members : {{typeCounter.invited}}</p>
 </div>
 
