--- a/src/app/add-member/add-member.component.scss
+++ b/src/app/add-member/add-member.component.scss
@@ -5,18 +5,22 @@
     width: 100%;
     position: absolute;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    .title {
+        font-size: $large-text;
+        color: $dark-green;
+    }
     form {
         width: 300px;
-        height: 400px;
+        height: auto;
         border: 3px solid $green;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 0 20px 0 20px;
+        padding: 20px;
         border-radius: 5px;
-        font-size: 18px;
+        font-size: $small-text;
         color: $green;
         font-weight: bold;
         input {
@@ -29,7 +33,7 @@
             outline: none;
             background-color: white;
             color: $grey;
-            font-size: 18px;
+            font-size: $small-text;
         }
         input:-internal-autofill-selected {
             background-color: white;
@@ -39,13 +43,21 @@
             border: 2px solid $dark-green;
             background-color: $green;
             color: white;
-            font-size: 24px;
+            font-size: $large-text;
             font-weight: bold;
             height: 50px;
             outline: none;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+        }
+        .error {
+            font-size: $small-text;
+            font-weight: bold;
+            color: white;
+            background-color: #ff1919;
+            text-align: center;
+            margin-bottom: 15px;
         }
     }
 }
