--- a/src/app/member-list/member-modal/member-modal.component.scss
+++ b/src/app/member-list/member-modal/member-modal.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/style/style.scss';
+
 .modal {
     position: fixed;
     z-index: 1;
@@ -13,7 +15,7 @@
         padding: 20px;
         border: 1px solid #888;
         width: 40%;
-        font-size: 22px;
+        font-size: $medium-text;
         font-weight: bold;
         border-radius: 5px;
         .close {
@@ -30,7 +32,7 @@
             padding: 0;
             border: none;
             outline: none;
-            font-size: 22px;
+            font-size: $medium-text;
             font-weight: bold;
             color: white;
             cursor: pointer;
